# belief-state-geometry

./: .gitignore  LICENSE  README.md  pyproject.toml
checkpoints/: mess3_fast.pt  mixture_h2_t2.pt  mixture_ledger_w64.pt  mixture_ledger_w8.pt  rrxor_fast.pt
docs/: phase2.md  writeup.md
notebooks/: 01_mess3_replication.ipynb  02_rrxor_layers.ipynb  _build_notebooks.py
results/: mess3_train_history.json  metrics.json  metrics_mess3.json  metrics_mixture.json  metrics_mixture_ablation.json  metrics_mixture_depth_geometry.json  metrics_mixture_direction.json  metrics_mixture_position_geometry.json  metrics_norm_confidence.json  metrics_retention_ledger_w64.json  metrics_retention_ledger_w8.json  metrics_rrxor.json  mixture_capacity_summary.json  mixture_capacity_sweep.json  mixture_sweep.json  mixture_sweep_summary.json  rrxor_train_history.json
src/: beliefs.py  data.py  experiments.py  model.py  probe.py  train.py  viz.py
src/hmms/: __init__.py  base.py  mess3.py  mixture.py  rrxor.py
tests/: test_beliefs.py  test_hmms.py  test_mixture.py
